changes: add mystic tab traslations

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -264,6 +264,10 @@
   "dialogs.items.disadvantage.content": "Disadvantage name",
   "dialogs.items.contact.content": "Contact name",
   "dialogs.items.note.content": "Note content",
+  "dialogs.items.summon.content": "Summon name",
+  "dialogs.items.selectedSpell.content": "Selected spell name",
+  "dialogs.items.spellMaintenance.content": "Maintained spell name",
+  "dialogs.items.metamagic.content": "Metamagic name",
   "anima.ui.advantageSection.title": "Advantages",
   "anima.ui.aspectSection.age.title": "Age",
   "anima.ui.aspectSection.appearance.title": "Appearance",
@@ -288,5 +292,55 @@
   "anima.ui.languageSection.title": "Languages",
   "anima.ui.levelSection.title": "Level",
   "anima.ui.notesSection.title": "Notes",
-  "anima.ui.titleSection.title": "Titles"
+  "anima.ui.titleSection.title": "Titles",
+  "anima.ui.mystic.act.title": "ACT",
+  "anima.ui.mystic.act.main.title": "Main",
+  "anima.ui.mystic.act.alternative.title": "Alternative",
+  "anima.ui.mystic.freeAccessSpell.title": "Free access",
+  "anima.ui.mystic.freeAccessSpell.level.title": "Level",
+  "anima.ui.mystic.freeAccessSpell.spell.title": "Spell",
+  "anima.ui.mystic.freeAccessSpell.cost.title": "Cost",
+  "anima.ui.mystic.innateMagic.title": "Innate Magic",
+  "anima.ui.mystic.innateMagic.main.title": "Main",
+  "anima.ui.mystic.innateMagic.alternative.title": "Alternative",
+  "anima.ui.mystic.magicProjection.title": "Magic Projection",
+  "anima.ui.mystic.magicProjection.final.title": "Final",
+  "anima.ui.mystic.magicProjection.final.rollMessage": "magic projection",
+  "anima.ui.mystic.magicProjection.offensive.title": "Offensive",
+  "anima.ui.mystic.magicProjection.offensive.rollMessage": "offensive magic projection",
+  "anima.ui.mystic.magicProjection.defensive.title": "Defensive",
+  "anima.ui.mystic.magicProjection.defensive.rollMessage": "defensive magic projection",
+  "anima.ui.mystic.metamagic.title": "Metamagics",
+  "anima.ui.mystic.metamagic.name.title": "Metamagic",
+  "anima.ui.mystic.metamagic.grade.title": "Grade",
+  "anima.ui.mystic.selectedSpells.title": "Selected spells",
+  "anima.ui.mystic.selectedSpells.name.title": "Spell",
+  "anima.ui.mystic.selectedSpells.cost.title": "Cost",
+  "anima.ui.mystic.spellMaintenance.title": "Daily maintenances",
+  "anima.ui.mystic.spellMaintenance.name.title": "Spell / Creature",
+  "anima.ui.mystic.spellMaintenance.cost.title": "Cost",
+  "anima.ui.mystic.magicLevel.spheres.title": "Sphere level",
+  "anima.ui.mystic.magicLevel.spheres.essence.title": "Essence",
+  "anima.ui.mystic.magicLevel.spheres.water.title": "Water",
+  "anima.ui.mystic.magicLevel.spheres.earth.title": "Earth",
+  "anima.ui.mystic.magicLevel.spheres.creation.title": "Creation",
+  "anima.ui.mystic.magicLevel.spheres.darkness.title": "Darkness",
+  "anima.ui.mystic.magicLevel.spheres.necromancy.title": "Necromancy",
+  "anima.ui.mystic.magicLevel.spheres.light.title": "Light",
+  "anima.ui.mystic.magicLevel.spheres.destruction.title": "Destruction",
+  "anima.ui.mystic.magicLevel.spheres.air.title": "Air",
+  "anima.ui.mystic.magicLevel.spheres.fire.title": "Fire",
+  "anima.ui.mystic.magicLevel.spheres.illusion.title": "Illusion",
+  "anima.ui.mystic.magicLevel.total.title": "Total",
+  "anima.ui.mystic.magicLevel.used.title": "Used",
+  "anima.ui.mystic.summoning.title": "Summoning",
+  "anima.ui.mystic.summoning.summon.title": "Summon",
+  "anima.ui.mystic.summoning.bind.title": "Bind",
+  "anima.ui.mystic.summoning.control.title": "Control",
+  "anima.ui.mystic.summoning.banish.title": "Banish",
+  "anima.ui.mystic.summon.title": "Summons",
+  "anima.ui.mystic.zeonRegeneration.title": "Zeon regen.",
+  "anima.ui.mystic.zeonRegeneration.final.title": "Final",
+  "anima.ui.mystic.zeon.title": "Zeon",
+  "anima.ui.mystic.zeon.final.title": "Final"
 }
