fix: add missing magic projection translation

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -304,6 +304,7 @@
   "anima.ui.mystic.innateMagic.main.title": "Main",
   "anima.ui.mystic.innateMagic.alternative.title": "Alternative",
   "anima.ui.mystic.magicProjection.title": "Magic Projection",
+  "anima.ui.mystic.magicProjection.imbalance.title": "Imbalance",
   "anima.ui.mystic.magicProjection.final.title": "Final",
   "anima.ui.mystic.magicProjection.final.rollMessage": "magic projection",
   "anima.ui.mystic.magicProjection.offensive.title": "Offensive",
