--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -302,6 +302,7 @@
   "anima.ui.mystic.innateMagic.main.title": "Principal",
   "anima.ui.mystic.innateMagic.alternative.title": "Alternative",
   "anima.ui.mystic.magicProjection.title": "Proyec. Mágica",
+  "anima.ui.mystic.magicProjection.imbalance.title": "Desequilibrio",
   "anima.ui.mystic.magicProjection.final.title": "Final",
   "anima.ui.mystic.magicProjection.final.rollMessage": "proyección mágica",
   "anima.ui.mystic.magicProjection.offensive.title": "Ofensiva",
