--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -354,5 +354,10 @@
   "anima.ui.psychic.mentalPattern.name.title": "Type",
   "anima.ui.psychic.mentalPattern.bonus.title": "Bonus",
   "anima.ui.psychic.mentalPattern.penalty.title": "Penalty",
-  "anima.ui.psychic.psychicDiscipline.title": "Psychic Disciplines"
+  "anima.ui.psychic.psychicDiscipline.title": "Psychic Disciplines",
+  "anima.ui.psychic.innatePsychicPower.title": "Innate Psychic Powers",
+  "anima.ui.psychic.innatePsychicPower.power.title": "Power",
+  "anima.ui.psychic.innatePsychicPower.effect.title": "Effect",
+  "anima.ui.psychic.innatePsychicPower.value.title": "Value",
+  "anima.ui.psychic.innatePsychicPower.amount.title": "Innates amount"
 }
