--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -268,6 +268,10 @@
   "dialogs.items.selectedSpell.content": "Selected spell name",
   "dialogs.items.spellMaintenance.content": "Maintained spell name",
   "dialogs.items.metamagic.content": "Metamagic name",
+  "dialogs.items.psychicDiscipline.content": "Discipline name",
+  "dialogs.items.mentalPattern.content": "Mental pattern name",
+  "dialogs.items.innatePsychicPower.content": "Innate psychic power name",
+  "dialogs.items.psychicPower.content": "Psychic power name",
   "anima.ui.advantageSection.title": "Advantages",
   "anima.ui.aspectSection.age.title": "Age",
   "anima.ui.aspectSection.appearance.title": "Appearance",
@@ -359,5 +363,11 @@
   "anima.ui.psychic.innatePsychicPower.power.title": "Power",
   "anima.ui.psychic.innatePsychicPower.effect.title": "Effect",
   "anima.ui.psychic.innatePsychicPower.value.title": "Value",
-  "anima.ui.psychic.innatePsychicPower.amount.title": "Innates amount"
+  "anima.ui.psychic.innatePsychicPower.amount.title": "Innate amount",
+  "anima.ui.psychic.psychicPowers.title": "Psychic Powers",
+  "anima.ui.psychic.psychicPowers.power.header.name.title": "Power",
+  "anima.ui.psychic.psychicPowers.power.header.level.title": "Level",
+  "anima.ui.psychic.psychicPowers.power.footer.actionType.title": "Action",
+  "anima.ui.psychic.psychicPowers.power.footer.hasMaintenance.title": "Maint.",
+  "anima.ui.psychic.psychicPowers.power.footer.bonus.title": "Bonus"
 }
