refactor: actor sheet header responsiveness

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -34,7 +34,6 @@
   "anima.combatAbilities": "Combat Abilities",
   "anima.composure": "Composure",
   "anima.concentration": "Concentration",
-  "anima.constitution": "Constitution",
   "anima.control": "Control",
   "anima.cooking": "Cooking",
   "anima.cord": "Cord",
@@ -53,7 +52,6 @@
   "anima.defensive": "Defensive",
   "anima.description": "Description",
   "anima.destruction": "Destruction",
-  "anima.dexterity": "Dexterity",
   "anima.diseaseResistance": "DR",
   "anima.disguise": "Disguise",
   "anima.dodge": "Dodge",
@@ -91,7 +89,6 @@
   "anima.impact": "Impact",
   "anima.innatePsychicPower": "Innate psychic power",
   "anima.intellectualAbilities": "Intellectual Abilities",
-  "anima.intelligence": "Intelligence",
   "anima.intelligenceRequired": "Intelligence Required",
   "anima.intermediate": "Intermediate",
   "anima.intimidate": "Intimidate",
@@ -139,14 +136,12 @@
   "anima.offensive": "Offensive",
   "anima.paladin": "Paladin",
   "anima.peace": "Peace",
-  "anima.perception": "Perception",
   "anima.perceptionAbilities": "Perception Abilities",
   "anima.persuasion": "Persuasion",
   "anima.physicalIncrease": "Physical Increase",
   "anima.physicalResistance": "PhR",
   "anima.poisons": "Poisons",
   "anima.poleWeapon": "Pole Weapons",
-  "anima.power": "Power",
   "anima.presence": "Presence",
   "anima.psychics": "Psychic",
   "anima.primaryAbilities": "Primary Abilities",
@@ -183,7 +178,6 @@
   "anima.speed": "Speed",
   "anima.stealth": "Stealth",
   "anima.streetwise": "Streetwise",
-  "anima.strength": "Strength",
   "anima.style": "Style",
   "anima.subterfugeAbilities": "Subterfuge Abilities",
   "anima.summon": "Summon",
@@ -222,7 +216,6 @@
   "anima.weaponTypePrimary": "Primary Weapon Type",
   "anima.weaponTypeSecondary": "Secondary Weapon Type",
   "anima.wearArmor": "Wear Armor",
-  "anima.willpower": "Willpower",
   "anima.withstandPain": "Withstand Pain",
   "anima.wizard": "Wizard",
   "anima.wizardMentalist": "Wizard Mentalist",
@@ -233,9 +226,6 @@
   "anima.maxLife": "Maximum life",
   "anima.regenerationSHORT": "Regen.",
   "anima.movementSHORT": "Movement",
-  "anima.modifiers": "Modifiers",
-  "anima.modifiersPhysical": "Physical",
-  "anima.modifiersAll": "All actions",
   "anima.penaltySHORT": "Pen.",
   "anima.physicalPenaltySHORT": "Pen. Physical",
   "anima.piloting": "Piloting",
@@ -272,6 +262,40 @@
   "dialogs.items.mentalPattern.content": "Mental pattern name",
   "dialogs.items.innatePsychicPower.content": "Innate psychic power name",
   "dialogs.items.psychicPower.content": "Psychic power name",
+  "anima.ui.characteristics.agility": "Agility",
+  "anima.ui.characteristics.constitution": "Constitution",
+  "anima.ui.characteristics.dexterity": "Dexterity",
+  "anima.ui.characteristics.strength": "Strength",
+  "anima.ui.characteristics.intelligence": "Intelligence",
+  "anima.ui.characteristics.perception": "Perception",
+  "anima.ui.characteristics.power": "Power",
+  "anima.ui.characteristics.willPower": "Willpower",
+  "anima.ui.resistances.title": "Resistances",
+  "anima.ui.resistances.physical": "Physical",
+  "anima.ui.resistances.disease": "Disease",
+  "anima.ui.resistances.poison": "Poison",
+  "anima.ui.resistances.magic": "Magic",
+  "anima.ui.resistances.psychic": "Psychic",
+  "anima.ui.general.modifiers.title": "- Modifiers -",
+  "anima.ui.general.modifiers.physicalActions.title": "Physical",
+  "anima.ui.general.modifiers.allActions.title": "Actions",
+  "anima.ui.general.life.max.title": "Base",
+  "anima.ui.general.life.current.title": "Life points",
+  "anima.ui.general.initiative.title": "Initiatives",
+  "anima.ui.general.initiative.base.title": "Base",
+  "anima.ui.general.initiative.primary.title": "Primary",
+  "anima.ui.general.initiative.secondary.title": "Secondary",
+  "anima.ui.general.fatigue.title": "Fatigue",
+  "anima.ui.general.movement.title": "Movement (m)",
+  "anima.ui.armor.title": "Armor",
+  "anima.ui.armor.name.title": "Name",
+  "anima.ui.armor.at.cut.title": "Cut",
+  "anima.ui.armor.at.impact.title": "Imp",
+  "anima.ui.armor.at.thrust.title": "Thr",
+  "anima.ui.armor.at.heat.title": "Hea",
+  "anima.ui.armor.at.electric.title": "Ele",
+  "anima.ui.armor.at.cold.title": "Col",
+  "anima.ui.armor.at.energy.title": "Ene",
   "anima.ui.advantageSection.title": "Advantages",
   "anima.ui.aspectSection.age.title": "Age",
   "anima.ui.aspectSection.appearance.title": "Appearance",
