--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -4,7 +4,6 @@
   "anima.action": "Acción",
   "anima.add": "Añadir",
   "anima.advanced": "Avanzado",
-  "anima.agility": "Agilidad",
   "anima.air": "Aire",
   "anima.alchemy": "Alquimia",
   "anima.animals": "Animales",
@@ -34,7 +33,6 @@
   "anima.combatAbilities": "Habilidades de Combate",
   "anima.composure": "Frialdad",
   "anima.concentration": "Concentración",
-  "anima.constitution": "Constitución",
   "anima.control": "Dominar",
   "anima.cooking": "Cocina",
   "anima.cord": "Cuerda",
@@ -53,7 +51,6 @@
   "anima.defensive": "Defensiva",
   "anima.description": "Descripción",
   "anima.destruction": "Destrucción",
-  "anima.dexterity": "Destreza",
   "anima.diseaseResistance": "RE",
   "anima.disguise": "Disfraz",
   "anima.dodge": "Esquiva",
@@ -91,7 +88,6 @@
   "anima.impact": "Contundente",
   "anima.innatePsychicPower": "Poder psíquico innato",
   "anima.intellectualAbilities": "Habilidades intelectuales",
-  "anima.intelligence": "Inteligencia",
   "anima.intelligenceRequired": "Inteligencia requerida",
   "anima.intermediate": "Intermedio",
   "anima.intimidate": "Intimidar",
@@ -139,14 +135,12 @@
   "anima.offensive": "Ofensiva",
   "anima.paladin": "Paladín",
   "anima.peace": "Paz",
-  "anima.perception": "Percepción",
   "anima.perceptionAbilities": "Habilidades Perceptivas",
   "anima.persuasion": "Persuasión",
   "anima.physicalIncrease": "Incremento Físico",
   "anima.physicalResistance": "RF",
   "anima.poisons": "Venenos",
   "anima.poleWeapon": "Asta",
-  "anima.power": "Poder",
   "anima.presence": "Presencia",
   "anima.primaryAbilities": "Habilidades Primarias",
   "anima.psychics": "Psíquicas",
@@ -183,7 +177,6 @@
   "anima.speed": "Turno",
   "anima.stealth": "Sigilo",
   "anima.streetwise": "Callejeo",
-  "anima.strength": "Fuerza",
   "anima.style": "Estilo",
   "anima.subterfugeAbilities": "Habilidades de subterfugio",
   "anima.summon": "Convocar",
@@ -222,7 +215,6 @@
   "anima.weaponTypePrimary": "Tipo primario",
   "anima.weaponTypeSecondary": "Tipo secundario",
   "anima.wearArmor": "Llevar Armadura",
-  "anima.willpower": "Voluntad",
   "anima.withstandPain": "Resistir el dolor",
   "anima.wizard": "Hechicero",
   "anima.wizardMentalist": "Hechicero Mentalista",
@@ -233,9 +225,6 @@
   "anima.maxLife": "Vida Máxima",
   "anima.regenerationSHORT": "Regen.",
   "anima.movementSHORT": "Movimie.",
-  "anima.modifiers": "Modificadores",
-  "anima.modifiersPhysical": "Físico",
-  "anima.modifiersAll": "Acción",
   "anima.piloting": "Pilotar",
   "anima.animism": "Animismo",
   "anima.ritualCalligraphy": "Cal. Ritual",
@@ -269,6 +258,39 @@
   "dialogs.items.mentalPattern.content": "Nombre del patrón mental",
   "dialogs.items.innatePsychicPower.content": "Nombre del poder psíquico innato",
   "dialogs.items.psychicPower.content": "Nombre del poder psíquico",
+  "anima.ui.characteristics.agility": "Agilidad",
+  "anima.ui.characteristics.constitution": "Constitución",
+  "anima.ui.characteristics.dexterity": "Destreza",
+  "anima.ui.characteristics.strength": "Fuerza",
+  "anima.ui.characteristics.intelligence": "Inteligencia",
+  "anima.ui.characteristics.perception": "Percepción",
+  "anima.ui.characteristics.power": "Poder",
+  "anima.ui.characteristics.willPower": "Voluntad",
+  "anima.ui.resistances.title": "Resistencias",
+  "anima.ui.resistances.physical": "Física",
+  "anima.ui.resistances.disease": "Enfermedades",
+  "anima.ui.resistances.poison": "Venenos",
+  "anima.ui.resistances.magic": "Mágica",
+  "anima.ui.resistances.psychic": "Psíquica",
+  "anima.ui.general.modifiers.physicalActions.title": "Físicos",
+  "anima.ui.general.modifiers.allActions.title": "Acciones",
+  "anima.ui.general.life.max.title": "Base",
+  "anima.ui.general.life.current.title": "Puntos de vida",
+  "anima.ui.general.initiative.title": "Turnos",
+  "anima.ui.general.initiative.base.title": "Base",
+  "anima.ui.general.initiative.primary.title": "Primaria",
+  "anima.ui.general.initiative.secondary.title": "Secundaria",
+  "anima.ui.general.fatigue.title": "Cansancio",
+  "anima.ui.general.movement.title": "Movimiento (m)",
+  "anima.ui.armor.title": "Armadura",
+  "anima.ui.armor.name.title": "Nombre",
+  "anima.ui.armor.at.cut.title": "Fil",
+  "anima.ui.armor.at.impact.title": "Con",
+  "anima.ui.armor.at.thrust.title": "Pen",
+  "anima.ui.armor.at.heat.title": "Cal",
+  "anima.ui.armor.at.electric.title": "Ele",
+  "anima.ui.armor.at.cold.title": "Frio",
+  "anima.ui.armor.at.energy.title": "Ene",
   "anima.ui.advantageSection.title": "Ventajas",
   "anima.ui.aspectSection.age.title": "Edad",
   "anima.ui.aspectSection.appearance.title": "Apariencia",
