feat: add domine tab

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -258,6 +258,13 @@
   "dialogs.items.mentalPattern.content": "Nombre del patrón mental",
   "dialogs.items.innatePsychicPower.content": "Nombre del poder psíquico innato",
   "dialogs.items.psychicPower.content": "Nombre del poder psíquico",
+  "dialogs.items.kiSkill.content": "Nombre de la habilidad de Ki",
+  "dialogs.items.nemesisSkill.content": "Nombre de la habilidad de Némesis",
+  "dialogs.items.arsMagnus.content": "Nombre del Ars Magnus",
+  "dialogs.items.martialArt.content": "Nombre del arte marcial",
+  "dialogs.items.creature.content": "Nombre de la criatura",
+  "dialogs.items.specialSkill.content": "Nombre de la habilidad especial o tabla",
+  "dialogs.items.technique.content": "Nombre de la técnica",
   "anima.ui.characteristics.agility": "Agilidad",
   "anima.ui.characteristics.constitution": "Constitución",
   "anima.ui.characteristics.dexterity": "Destreza",
@@ -288,7 +295,7 @@
   "anima.ui.armor.at.impact.title": "Con",
   "anima.ui.armor.at.thrust.title": "Pen",
   "anima.ui.armor.at.heat.title": "Cal",
-  "anima.ui.armor.at.electric.title": "Ele",
+  "anima.ui.armor.at.electricity.title": "Ele",
   "anima.ui.armor.at.cold.title": "Frio",
   "anima.ui.armor.at.energy.title": "Ene",
   "anima.ui.advantageSection.title": "Ventajas",
@@ -367,6 +374,49 @@
   "anima.ui.mystic.zeonRegeneration.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
   "anima.ui.mystic.zeon.final.title": "Final",
+  "anima.ui.domine.kiSkills.title": "Habilidades del Ki",
+  "anima.ui.domine.arsMagnus.title": "Ars Magnus",
+  "anima.ui.domine.creatures.title": "Criatura",
+  "anima.ui.domine.creatures.name.title": "Nombre",
+  "anima.ui.domine.creatures.fire.title": "Fuego",
+  "anima.ui.domine.creatures.water.title": "Agua",
+  "anima.ui.domine.creatures.earth.title": "Tierra",
+  "anima.ui.domine.creatures.wood.title": "Madera",
+  "anima.ui.domine.creatures.metal.title": "Metal",
+  "anima.ui.domine.martialArts.title": "Artes Marciales",
+  "anima.ui.domine.martialArts.name.title": "Nombre",
+  "anima.ui.domine.martialArts.grade.title": "Grado",
+  "anima.ui.domine.nemesisSkills.title": "Habilidades de Némesis",
+  "anima.ui.domine.specialSkills.title": "Hab. Especiales / Tablas",
+  "anima.ui.domine.kiAccumulation.accumulation.title": "Acu.",
+  "anima.ui.domine.kiAccumulation.title": "Reserva Ki",
+  "anima.ui.domine.kiAccumulation.strength.title": "Fue",
+  "anima.ui.domine.kiAccumulation.agility.title": "Agi",
+  "anima.ui.domine.kiAccumulation.dexterity.title": "Des",
+  "anima.ui.domine.kiAccumulation.constitution.title": "Con",
+  "anima.ui.domine.kiAccumulation.willPower.title": "Vol",
+  "anima.ui.domine.kiAccumulation.power.title": "Pod",
+  "anima.ui.domine.kiAccumulation.generic.title": "Genérico",
+  "anima.ui.domine.martialKnowledge.title": "Conocimiento Marcial",
+  "anima.ui.domine.martialKnowledge.mk.title": "CM",
+  "anima.ui.domine.seals.title": "Sellos",
+  "anima.ui.domine.seals.minor.title": "Menor",
+  "anima.ui.domine.seals.major.title": "Mayor",
+  "anima.ui.domine.seals.earth.title": "Tierra",
+  "anima.ui.domine.seals.metal.title": "Metal",
+  "anima.ui.domine.seals.wind.title": "Aire",
+  "anima.ui.domine.seals.water.title": "Agua",
+  "anima.ui.domine.seals.wood.title": "Madera",
+  "anima.ui.domine.techniques.title": "Técnicas",
+  "anima.ui.domine.techniques.technique.header.name.title": "Técnica",
+  "anima.ui.domine.techniques.technique.footer.level.title": "Nivel",
+  "anima.ui.domine.techniques.technique.footer.strength.title": "Fue",
+  "anima.ui.domine.techniques.technique.footer.agility.title": "Agi",
+  "anima.ui.domine.techniques.technique.footer.dexterity.title": "Des",
+  "anima.ui.domine.techniques.technique.footer.constitution.title": "Con",
+  "anima.ui.domine.techniques.technique.footer.willPower.title": "Vol",
+  "anima.ui.domine.techniques.technique.footer.power.title": "Pod",
+  "anima.ui.domine.techniques.technique.footer.martialKnowledge.title": "CM",
   "anima.ui.psychic.psychicPotential.title": "Potencial Psíquico",
   "anima.ui.psychic.psychicPotential.potential.title": "Potencial",
   "anima.ui.psychic.psychicProjection.title": "Projecc. Psíquica",
