fix: psychic powers difficulties, sheet performance and minor views and translation fixes

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -279,6 +279,7 @@
   "anima.ui.resistances.poison": "Venenos",
   "anima.ui.resistances.magic": "Mágica",
   "anima.ui.resistances.psychic": "Psíquica",
+  "anima.ui.general.modifiers.title": "- Modificadores -",
   "anima.ui.general.modifiers.physicalActions.title": "Físicos",
   "anima.ui.general.modifiers.allActions.title": "Acciones",
   "anima.ui.general.life.max.title": "Base",
@@ -421,8 +422,8 @@
   "anima.ui.psychic.psychicPotential.potential.title": "Potencial",
   "anima.ui.psychic.psychicProjection.title": "Projecc. Psíquica",
   "anima.ui.psychic.psychicProjection.projection.title": "Proyección",
-  "anima.ui.psychic.psychicPower.title": "CV",
-  "anima.ui.psychic.psychicPower.power.title": "Final",
+  "anima.ui.psychic.psychicPoints.title": "CV",
+  "anima.ui.psychic.psychicPoints.power.title": "Final",
   "anima.ui.psychic.mentalPattern.title": "Patrones Mentales",
   "anima.ui.psychic.mentalPattern.name.title": "Tipo",
   "anima.ui.psychic.mentalPattern.bonus.title": "Bono",
