WIP: Combat tab

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -323,6 +323,11 @@
   "anima.ui.levelSection.title": "Nivel",
   "anima.ui.notesSection.title": "Notas",
   "anima.ui.titleSection.title": "Títulos",
+  "anima.ui.combat.baseValues.title": "Valores base",
+  "anima.ui.combat.baseValues.attack.title": "Ataque",
+  "anima.ui.combat.baseValues.block.title": "Parada",
+  "anima.ui.combat.baseValues.dodge.title": "Esquiva",
+  "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
   "anima.ui.mystic.act.title": "ACT",
   "anima.ui.mystic.act.main.title": "Principal",
   "anima.ui.mystic.act.alternative.title": "Alternativo",
