--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -328,6 +328,11 @@
   "anima.ui.levelSection.title": "Level",
   "anima.ui.notesSection.title": "Notes",
   "anima.ui.titleSection.title": "Titles",
+  "anima.ui.combat.baseValues.title": "Base Values",
+  "anima.ui.combat.baseValues.attack.title": "Attack",
+  "anima.ui.combat.baseValues.block.title": "Block",
+  "anima.ui.combat.baseValues.dodge.title": "Dodge",
+  "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
   "anima.ui.mystic.act.title": "ACT",
   "anima.ui.mystic.act.main.title": "Main",
   "anima.ui.mystic.act.alternative.title": "Alternative",
