changes: add remaining fields from html combat table

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -333,6 +333,21 @@
   "anima.ui.combat.baseValues.block.title": "Block",
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
+  "anima.ui.combat.combatTables.title": "Combat tables",
+  "anima.ui.combat.ammo.title": "Ammo",
+  "anima.ui.combat.ammo.name.title": "Name",
+  "anima.ui.combat.ammo.amount.title": "Amount",
+  "anima.ui.combat.weapons.title": "Weapons",
+  "anima.ui.combat.weapons.header.name.title": "Name",
+  "anima.ui.combat.weapons.special.title": "Spe.",
+  "anima.ui.combat.weapons.integrity.title": "Int.",
+  "anima.ui.combat.weapons.breaking.title": "Bre.",
+  "anima.ui.combat.weapons.attack.title": "Attack",
+  "anima.ui.combat.weapons.block.title": "Block",
+  "anima.ui.combat.weapons.damage.title": "Damage",
+  "anima.ui.combat.weapons.initiative.title": "Initiative",
+  "anima.ui.combat.weapons.critic.primary.title": "Critic 1",
+  "anima.ui.combat.weapons.critic.secondary.title": "Critic 2",
   "anima.ui.mystic.act.title": "ACT",
   "anima.ui.mystic.act.main.title": "Main",
   "anima.ui.mystic.act.alternative.title": "Alternative",
