--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -329,6 +329,21 @@
   "anima.ui.combat.baseValues.block.title": "Parada",
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
+  "anima.ui.combat.combatTables.title": "Tablas de combate",
+  "anima.ui.combat.ammo.title": "Munición",
+  "anima.ui.combat.ammo.name.title": "Nombre",
+  "anima.ui.combat.ammo.amount.title": "Cantidad",
+  "anima.ui.combat.weapons.title": "Armas",
+  "anima.ui.combat.weapons.header.name.title": "Nombre",
+  "anima.ui.combat.weapons.special.title": "Esp.",
+  "anima.ui.combat.weapons.integrity.title": "Ent.",
+  "anima.ui.combat.weapons.breaking.title": "Rot.",
+  "anima.ui.combat.weapons.attack.title": "Ataque",
+  "anima.ui.combat.weapons.block.title": "Parada",
+  "anima.ui.combat.weapons.damage.title": "Daño",
+  "anima.ui.combat.weapons.initiative.title": "Turno",
+  "anima.ui.combat.weapons.critic.primary.title": "Crítico 1",
+  "anima.ui.combat.weapons.critic.secondary.title": "Crítico 2",
   "anima.ui.mystic.act.title": "ACT",
   "anima.ui.mystic.act.main.title": "Principal",
   "anima.ui.mystic.act.alternative.title": "Alternativo",
