fix: minor fixes on translations and styles

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -269,6 +269,10 @@
   "dialogs.items.creature.content": "Creature name",
   "dialogs.items.specialSkill.content": "Special skill or table name",
   "dialogs.items.technique.content": "Technique name",
+  "dialogs.items.combatSpecialSkills.content": "Name",
+  "dialogs.items.combatTable.content": "Combat table name",
+  "dialogs.items.ammo.content": "Ammo name",
+  "dialogs.items.weapons.content": "Weapon name",
   "anima.ui.characteristics.agility": "Agility",
   "anima.ui.characteristics.constitution": "Constitution",
   "anima.ui.characteristics.dexterity": "Dexterity",
