--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -265,6 +265,10 @@
   "dialogs.items.creature.content": "Nombre de la criatura",
   "dialogs.items.specialSkill.content": "Nombre de la habilidad especial o tabla",
   "dialogs.items.technique.content": "Nombre de la técnica",
+  "dialogs.items.combatSpecialSkills.content": "Nombre",
+  "dialogs.items.combatTable.content": "Nombre de la tabla de combate",
+  "dialogs.items.ammo.content": "Nombre de la munición",
+  "dialogs.items.weapons.content": "Nombre del arma",
   "anima.ui.characteristics.agility": "Agilidad",
   "anima.ui.characteristics.constitution": "Constitución",
   "anima.ui.characteristics.dexterity": "Destreza",
