changes: add attribute bars

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -403,6 +403,7 @@
   "anima.ui.mystic.zeonRegeneration.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
   "anima.ui.mystic.zeon.final.title": "Final",
+  "anima.ui.mystic.zeon.accumulated.title": "Accumulated",
   "anima.ui.domine.kiSkills.title": "Ki Skills",
   "anima.ui.domine.arsMagnus.title": "Ars Magnus",
   "anima.ui.domine.creatures.title": "Creature",
