--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -357,7 +357,7 @@
   "anima.ui.mystic.freeAccessSpell.cost.title": "Coste",
   "anima.ui.mystic.innateMagic.title": "Magia Innata",
   "anima.ui.mystic.innateMagic.main.title": "Principal",
-  "anima.ui.mystic.innateMagic.alternative.title": "Alternative",
+  "anima.ui.mystic.innateMagic.alternative.title": "Alternativo",
   "anima.ui.mystic.magicProjection.title": "Proyec. Mágica",
   "anima.ui.mystic.magicProjection.imbalance.title": "Desequilibrio",
   "anima.ui.mystic.magicProjection.final.title": "Final",
@@ -399,6 +399,7 @@
   "anima.ui.mystic.zeonRegeneration.final.title": "Final",
   "anima.ui.mystic.zeon.title": "Zeon",
   "anima.ui.mystic.zeon.final.title": "Final",
+  "anima.ui.mystic.zeon.accumulated.title": "Acumulado",
   "anima.ui.domine.kiSkills.title": "Habilidades del Ki",
   "anima.ui.domine.arsMagnus.title": "Ars Magnus",
   "anima.ui.domine.creatures.title": "Criatura",
