feat: add armors

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -30,13 +30,21 @@
   "anima.ui.combat.ammo.amount.title": "Cantidad",
   "anima.ui.combat.ammo.name.title": "Nombre",
   "anima.ui.combat.ammo.title": "Munición",
+  "anima.ui.combat.armors.cold.title": "Frio",
+  "anima.ui.combat.armors.cut.title": "Fil",
+  "anima.ui.combat.armors.electricity.title": "Ele",
+  "anima.ui.combat.armors.energy.title": "Ene",
+  "anima.ui.combat.armors.header.name.title": "Nombre",
+  "anima.ui.combat.armors.heat.title": "Cal",
+  "anima.ui.combat.armors.impact.title": "Con",
+  "anima.ui.combat.armors.thrust.title": "Pen",
+  "anima.ui.combat.armors.title": "Armaduras",
   "anima.ui.combat.baseValues.attack.title": "Ataque",
   "anima.ui.combat.baseValues.block.title": "Parada",
   "anima.ui.combat.baseValues.dodge.title": "Esquiva",
   "anima.ui.combat.baseValues.title": "Valores base",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
   "anima.ui.combat.combatTables.title": "Tablas de combate",
-  "anima.ui.combat.weapons.attack.title": "Ataque",
   "anima.ui.combat.weapons.block.title": "Parada",
   "anima.ui.combat.weapons.breaking.title": "Rot.",
   "anima.ui.combat.weapons.critic.primary.title": "Crítico 1",
@@ -296,6 +304,7 @@
   "dialogs.items.summon.content": "Nombre de la invocación",
   "dialogs.items.technique.content": "Nombre de la técnica",
   "dialogs.items.title.content": "Nombre del título",
+  "dialogs.items.armors.content": "Nombre de la armadura",
   "dialogs.items.weapons.content": "Nombre del arma",
   "dialogs.mod.content": "Modificador",
   "dialogs.title": "Diálogo"
