--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -30,6 +30,15 @@
   "anima.ui.combat.ammo.amount.title": "Amount",
   "anima.ui.combat.ammo.name.title": "Name",
   "anima.ui.combat.ammo.title": "Ammo",
+  "anima.ui.combat.armors.cold.title": "Col",
+  "anima.ui.combat.armors.cut.title": "Cut",
+  "anima.ui.combat.armors.electricity.title": "Ele",
+  "anima.ui.combat.armors.energy.title": "Ene",
+  "anima.ui.combat.armors.header.name.title": "Nombre",
+  "anima.ui.combat.armors.heat.title": "Hea",
+  "anima.ui.combat.armors.impact.title": "Imp",
+  "anima.ui.combat.armors.thrust.title": "Thr",
+  "anima.ui.combat.armors.title": "Armaduras",
   "anima.ui.combat.baseValues.attack.title": "Attack",
   "anima.ui.combat.baseValues.block.title": "Block",
   "anima.ui.combat.baseValues.dodge.title": "Dodge",
@@ -297,6 +306,7 @@
   "dialogs.items.summon.content": "Summon name",
   "dialogs.items.technique.content": "Technique name",
   "dialogs.items.title.content": "Title name",
+  "dialogs.items.armors.content": "Armor name",
   "dialogs.items.weapons.content": "Weapon name",
   "dialogs.mod.content": "Modifier",
   "dialogs.title": "Dialog"
