changes: make weapon attack and block are rolleables

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -45,7 +45,9 @@
   "anima.ui.combat.baseValues.title": "Base Values",
   "anima.ui.combat.combatSpecialSkill.title": "Special Skills",
   "anima.ui.combat.combatTables.title": "Combat tables",
+  "anima.ui.combat.weapons.attack.roll.message": "attacks with ",
   "anima.ui.combat.weapons.attack.title": "Attack",
+  "anima.ui.combat.weapons.block.roll.message": "block with ",
   "anima.ui.combat.weapons.block.title": "Block",
   "anima.ui.combat.weapons.breaking.title": "Bre.",
   "anima.ui.combat.weapons.critic.primary.title": "Critic 1",
