--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -45,6 +45,9 @@
   "anima.ui.combat.baseValues.title": "Valores base",
   "anima.ui.combat.combatSpecialSkill.title": "Habilidades especiales",
   "anima.ui.combat.combatTables.title": "Tablas de combate",
+  "anima.ui.combat.weapons.attack.roll.message": "ataque con ",
+  "anima.ui.combat.weapons.attack.title": "Ataque",
+  "anima.ui.combat.weapons.block.roll.message": "parada con ",
   "anima.ui.combat.weapons.block.title": "Parada",
   "anima.ui.combat.weapons.breaking.title": "Rot.",
   "anima.ui.combat.weapons.critic.primary.title": "Crítico 1",
