refactor: common resources section

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -111,16 +111,16 @@
   "anima.ui.elanSection.title": "Elan",
   "anima.ui.experienceSection.title": "Experience",
   "anima.ui.general.fatigue.title": "Fatigue",
-  "anima.ui.general.initiative.base.title": "Base",
-  "anima.ui.general.initiative.primary.title": "Primary",
-  "anima.ui.general.initiative.secondary.title": "Secondary",
-  "anima.ui.general.initiative.title": "Initiatives",
+  "anima.ui.general.initiative.base.title": "Turn",
+  "anima.ui.general.initiative.primary.title": "Turn 1",
+  "anima.ui.general.initiative.secondary.title": "Turn 2",
   "anima.ui.general.life.current.title": "Life points",
   "anima.ui.general.life.max.title": "Base",
   "anima.ui.general.modifiers.allActions.title": "Actions",
   "anima.ui.general.modifiers.physicalActions.title": "Physical",
   "anima.ui.general.modifiers.title": "- Modifiers -",
   "anima.ui.general.movement.title": "Movement (m)",
+  "anima.ui.general.movement.quarter.title": "1/4 (m)",
   "anima.ui.languageSection.base": "Base",
   "anima.ui.languageSection.title": "Languages",
   "anima.ui.levelSection.title": "Level",
