--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -111,16 +111,16 @@
   "anima.ui.elanSection.title": "Elan",
   "anima.ui.experienceSection.title": "Experiencia",
   "anima.ui.general.fatigue.title": "Cansancio",
-  "anima.ui.general.initiative.base.title": "Base",
-  "anima.ui.general.initiative.primary.title": "Primaria",
-  "anima.ui.general.initiative.secondary.title": "Secundaria",
-  "anima.ui.general.initiative.title": "Turnos",
+  "anima.ui.general.initiative.base.title": "Tur. Base",
+  "anima.ui.general.initiative.primary.title": "Tur. 1",
+  "anima.ui.general.initiative.secondary.title": "Tur. 2",
   "anima.ui.general.life.current.title": "Puntos de vida",
   "anima.ui.general.life.max.title": "Base",
   "anima.ui.general.modifiers.allActions.title": "Acciones",
   "anima.ui.general.modifiers.physicalActions.title": "Físicos",
   "anima.ui.general.modifiers.title": "- Modificadores -",
   "anima.ui.general.movement.title": "Movimiento (m)",
+  "anima.ui.general.movement.quarter.title": "1/4 (m)",
   "anima.ui.languageSection.base": "Base",
   "anima.ui.languageSection.title": "Idiomas",
   "anima.ui.levelSection.title": "Nivel",
