feat: final armor calculations are automatical

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,7 +8,7 @@
   "anima.ui.armor.at.impact.title": "Imp",
   "anima.ui.armor.at.thrust.title": "Thr",
   "anima.ui.armor.name.title": "Name",
-  "anima.ui.armor.title": "Armor",
+  "anima.ui.armor.title": "Final armor",
   "anima.ui.aspectSection.age.title": "Age",
   "anima.ui.aspectSection.appearance.title": "Appearance",
   "anima.ui.aspectSection.eyes.title": "Eyes",
