--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -8,7 +8,7 @@
   "anima.ui.armor.at.impact.title": "Con",
   "anima.ui.armor.at.thrust.title": "Pen",
   "anima.ui.armor.name.title": "Nombre",
-  "anima.ui.armor.title": "Armadura",
+  "anima.ui.armor.title": "Armadura final",
   "anima.ui.aspectSection.age.title": "Edad",
   "anima.ui.aspectSection.appearance.title": "Apariencia",
   "anima.ui.aspectSection.eyes.title": "Ojos",
