changes: add more fields to weapons

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,12 +1,12 @@
 {
   "anima.ui.advantageSection.title": "Advantages",
-  "anima.ui.armor.at.cold.title": "Col",
-  "anima.ui.armor.at.cut.title": "Cut",
-  "anima.ui.armor.at.electricity.title": "Ele",
-  "anima.ui.armor.at.energy.title": "Ene",
-  "anima.ui.armor.at.heat.title": "Hea",
-  "anima.ui.armor.at.impact.title": "Imp",
-  "anima.ui.armor.at.thrust.title": "Thr",
+  "anima.ui.armor.at.cold.title": "COL",
+  "anima.ui.armor.at.cut.title": "CUT",
+  "anima.ui.armor.at.electricity.title": "ELE",
+  "anima.ui.armor.at.energy.title": "ENE",
+  "anima.ui.armor.at.heat.title": "HEA",
+  "anima.ui.armor.at.impact.title": "IMP",
+  "anima.ui.armor.at.thrust.title": "THR",
   "anima.ui.armor.name.title": "Name",
   "anima.ui.armor.title": "Final armor",
   "anima.ui.aspectSection.age.title": "Age",
@@ -55,8 +55,24 @@
   "anima.ui.combat.weapons.damage.title": "Damage",
   "anima.ui.combat.weapons.header.name.title": "Name",
   "anima.ui.combat.weapons.initiative.title": "Initiative",
+  "anima.ui.combat.weapons.presence.title": "Presence",
+  "anima.ui.combat.weapons.size.title": "Size",
+  "anima.ui.combat.weapons.quality.title": "Quality",
+  "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 handed",
+  "anima.ui.weapons.one-handed.title": "one handed",
+  "anima.ui.weapons.two-handed.title": "two handed",
+  "anima.ui.combat.weapons.knowledgeType.title": "Type",
+  "anima.ui.weapons.known.title": "Known",
+  "anima.ui.weapons.similar.title": "Similar",
+  "anima.ui.weapons.mixed.title": "Mixed",
+  "anima.ui.weapons.different.title": "Different / Unarmed",
+  "anima.ui.combat.weapons.initiativeBase.title": "Initiative base",
+  "anima.ui.combat.weapons.fueRequired.title": "STR req.",
+  "anima.ui.combat.weapons.isRanged.title": "¿Is ranged?",
+  "anima.ui.combat.weapons.cadence.title": "Cadence",
+  "anima.ui.combat.weapons.range.title": "Range (m)",
   "anima.ui.combat.weapons.integrity.title": "Int.",
-  "anima.ui.combat.weapons.special.title": "Spe.",
+  "anima.ui.combat.weapons.special.title": "Special",
   "anima.ui.combat.weapons.title": "Weapons",
   "anima.ui.contactSection.contactRow.description": "Description",
   "anima.ui.contactSection.contactRow.name": "Name",
