--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -1,12 +1,12 @@
 {
   "anima.ui.advantageSection.title": "Ventajas",
-  "anima.ui.armor.at.cold.title": "Frio",
-  "anima.ui.armor.at.cut.title": "Fil",
-  "anima.ui.armor.at.electricity.title": "Ele",
-  "anima.ui.armor.at.energy.title": "Ene",
-  "anima.ui.armor.at.heat.title": "Cal",
-  "anima.ui.armor.at.impact.title": "Con",
-  "anima.ui.armor.at.thrust.title": "Pen",
+  "anima.ui.armor.at.cold.title": "FRI",
+  "anima.ui.armor.at.cut.title": "FIL",
+  "anima.ui.armor.at.electricity.title": "ELE",
+  "anima.ui.armor.at.energy.title": "ENE",
+  "anima.ui.armor.at.heat.title": "CAL",
+  "anima.ui.armor.at.impact.title": "CON",
+  "anima.ui.armor.at.thrust.title": "PEN",
   "anima.ui.armor.name.title": "Nombre",
   "anima.ui.armor.title": "Armadura final",
   "anima.ui.aspectSection.age.title": "Edad",
@@ -55,8 +55,24 @@
   "anima.ui.combat.weapons.damage.title": "Daño",
   "anima.ui.combat.weapons.header.name.title": "Nombre",
   "anima.ui.combat.weapons.initiative.title": "Turno",
+  "anima.ui.combat.weapons.presence.title": "Presencia",
+  "anima.ui.combat.weapons.size.title": "Tamaño",
+  "anima.ui.combat.weapons.quality.title": "Calidad",
+  "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 manos",
+  "anima.ui.weapons.one-handed.title": "a una manos",
+  "anima.ui.weapons.two-handed.title": "a dos manos",
+  "anima.ui.combat.weapons.knowledgeType.title": "Tipo",
+  "anima.ui.weapons.known.title": "Conocida",
+  "anima.ui.weapons.similar.title": "Similar",
+  "anima.ui.weapons.mixed.title": "Mixta",
+  "anima.ui.weapons.different.title": "Diferente / Desarmado",
+  "anima.ui.combat.weapons.initiativeBase.title": "Turno base",
+  "anima.ui.combat.weapons.fueRequired.title": "FUE req.",
+  "anima.ui.combat.weapons.isRanged.title": "¿A distancia?",
+  "anima.ui.combat.weapons.cadence.title": "Cadencia",
+  "anima.ui.combat.weapons.range.title": "Rango (m)",
   "anima.ui.combat.weapons.integrity.title": "Ent.",
-  "anima.ui.combat.weapons.special.title": "Esp.",
+  "anima.ui.combat.weapons.special.title": "Especial",
   "anima.ui.combat.weapons.title": "Armas",
   "anima.ui.contactSection.contactRow.description": "Descripción",
   "anima.ui.contactSection.contactRow.name": "Nombre",
