hotfix: typo and non critic weapon type

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -59,8 +59,8 @@
   "anima.ui.combat.weapons.size.title": "Tamaño",
   "anima.ui.combat.weapons.quality.title": "Calidad",
   "anima.ui.combat.weapons.oneOrTwoHanded.title": "1 o 2 manos",
-  "anima.ui.weapons.one-handed.title": "a una manos",
-  "anima.ui.weapons.two-handed.title": "a dos manos",
+  "anima.ui.weapons.one-handed.title": "A una mano",
+  "anima.ui.weapons.two-handed.title": "A dos manos",
   "anima.ui.combat.weapons.knowledgeType.title": "Tipo",
   "anima.ui.weapons.known.title": "Conocida",
   "anima.ui.weapons.similar.title": "Similar",
